Making changes specific to java 1.8